--- a/bista_purchase/report/report_templates.xml
+++ b/bista_purchase/report/report_templates.xml
@@ -118,29 +118,30 @@
             <t t-if="not o" t-set="o" t-value="doc"/>
             <t t-if="doc_model in ['sale.order','purchase.order']">
                 <div t-attf-class="footer o_company_#{company.id}_layout">
-                    <div class="text-center" style="border-top: 3px solid black; padding-bottom:30px; text-color: black;">
-                        <!--                        <div t-field="company.report_footer" style="font-size: 90%; text-color: black;"/>-->
-                        <!--                        <div t-if="report_type == 'pdf'">-->
-
-                        <!--                            Page: <span class="page"/> / <span class="topage"/>-->
-                        <!--                        </div>-->
-                        <div  t-if="report_type == 'pdf'">
-                            <span  t-field="res_company.partner_id.name"/>
-                            <span style="margin-right: 15px;" t-field="res_company.partner_id.street"/>
-                            |
-                            <span style="margin-left: 15px;" t-field="res_company.partner_id.city"/>
-                            <span t-field="res_company.partner_id.state_id"/>
-                            <span style="margin-right: 15px;" t-field="res_company.partner_id.zip"/>
-                            |
-                            <span style="margin-left: 15px;margin-right: 15px;" t-field="res_company.partner_id.phone"/>
-                            |
-                            <span style="margin-left: 15px;" t-field="res_company.partner_id.website"/>
-                        </div>
+                    <div class="text-center" style="border-top: 3px solid black; padding-bottom:30px; color:grey;">
+                        <div t-field="company.report_footer" style="font-size: 90%; text-color: black;"/>
                         <div t-if="report_type == 'pdf'">
-                         Page: <span class="page"/> / <span class="topage"/>
-                        </div>
 
-                    </div>
+                            Page: <span class="page"/> / <span class="topage"/>
+                        </div>
+<!--                        <div  t-if="report_type == 'pdf'">-->
+<!--                            <span style="margin-right: 15px;" t-field="res_company.partner_id.name"/>-->
+<!--                            |-->
+<!--                            <span style="margin-right: 15px; margin-left: 15px;" t-field="res_company.partner_id.street"/>-->
+<!--                            |-->
+<!--                            <span style="margin-left: 15px;" t-field="res_company.partner_id.city"/>-->
+<!--&lt;!&ndash;                            <span t-field="res_company.partner_id.state_id"/>&ndash;&gt;-->
+<!--                            <span style="margin-right: 15px;" t-field="res_company.partner_id.zip"/>-->
+<!--                            |-->
+<!--                            <span style="margin-left: 15px;margin-right: 15px;" t-field="res_company.partner_id.phone"/>-->
+<!--                            |-->
+<!--                            <span style="margin-left: 15px;" t-field="res_company.partner_id.website"/>-->
+                        </div>
+<!--                        <div t-if="report_type == 'pdf'">-->
+<!--                         Page: <span class="page"/> / <span class="topage"/>-->
+<!--                        </div>-->
+
+<!--                    </div>-->
                 </div>
             </t>
 <!--        <xpath expr="//div[@t-attf-class='footer o_boxed_footer o_company_#{company.id}_layout']" position="replace">-->
@@ -170,34 +171,34 @@
 <!--                    </div>-->
 <!--                </div>-->
 <!--            </t>-->
-            <t t-else="">
-                <div t-attf-class="footer o_boxed_footer o_company_#{company.id}_layout"
-                     style="margin-bottom: 0px; margin-left: 0px; margin-right: 0px;">
-                    <div class="text-center last-page">
-                        <div class="mb-0" style="margin-bottom: 0px;">
-                            <span t-field="res_company.partner_id.name" style="margin-left: 15px; margin-right: 15px;"/>
-                            |
-                            <span t-field="res_company.partner_id.street"
-                                  style="margin-left: 15px; margin-right: 15px;"/>
-                            |
-                            <span t-field="res_company.partner_id.phone"
-                                  style="margin-left: 15px; margin-right: 15px;"/>
-                            |
-                            <span t-field="res_company.partner_id.city" style="margin-left: 15px; margin-right: 15px;"/>
-                            |
-                            <span t-field="res_company.partner_id.website"
-                                  style="margin-left: 15px; margin-right: 15px;"/>
-                        </div>
+<!--            <t t-else="">-->
+<!--                <div t-attf-class="footer o_boxed_footer o_company_#{company.id}_layout"-->
+<!--                     style="margin-bottom: 0px; margin-left: 0px; margin-right: 0px;">-->
+<!--                    <div class="text-center last-page">-->
+<!--                        <div class="mb-0" style="margin-bottom: 0px;">-->
+<!--                            <span t-field="res_company.partner_id.name" style="margin-left: 15px; margin-right: 15px;"/>-->
+<!--                            |-->
+<!--                            <span t-field="res_company.partner_id.street"-->
+<!--                                  style="margin-left: 15px; margin-right: 15px;"/>-->
+<!--                            |-->
+<!--                            <span t-field="res_company.partner_id.phone"-->
+<!--                                  style="margin-left: 15px; margin-right: 15px;"/>-->
+<!--                            |-->
+<!--                            <span t-field="res_company.partner_id.city" style="margin-left: 15px; margin-right: 15px;"/>-->
+<!--                            |-->
+<!--                            <span t-field="res_company.partner_id.website"-->
+<!--                                  style="margin-left: 15px; margin-right: 15px;"/>-->
+<!--                        </div>-->
 
-                    </div>
-                    <div t-if="report_type == 'pdf'" class="text-center mt-1">
-                        Page:
-                        <span class="page"/>
-                        /
-                        <span class="topage"/>
-                    </div>
-                </div>
-            </t>
+<!--                    </div>-->
+<!--                    <div t-if="report_type == 'pdf'" class="text-center mt-1">-->
+<!--                        Page:-->
+<!--                        <span class="page"/>-->
+<!--                        /-->
+<!--                        <span class="topage"/>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </t>-->
         </xpath>
         <xpath expr="//div[hasclass('pt-5')]" position="replace">
             <t t-call="web.address_layout"/>
