--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -196,7 +196,6 @@
         <!-- Added info table beside total summery table  -->
         <xpath expr="//div[@name='so_total_summary']" position="replace">
             <div class="clearfix row" name="so_total_summary">
-                <t t-if="td_sn == 5"/>
                     <div class="col-6">
                         <span style="color:black;">
                             <b>Total Savings:
@@ -206,8 +205,7 @@
                         </span>
                     </div>
                     <div class="offset-2 col-4">
-    <!--                    <t t-if="td_sn == 5"/>-->
-                        <table style="width:200pt; height:140pt; page-break-before:always;">
+                        <table style="width:200pt; height:140pt;">
                             <tr>
                                 <td style="height:1px; width:180px; border-top: 1px solid black; color: black; padding-left:10px;"
                                     class="text-left">
@@ -267,6 +265,7 @@
                                 </td>
                             </tr>
                         </table>
+<!--                        </t>-->
                     </div>
 
             </div>
