--- a/bista_purchase/report/purchase.xml
+++ b/bista_purchase/report/purchase.xml
@@ -78,15 +78,15 @@
         <xpath expr="//h2[last()]" position="replace">
         </xpath>
         <xpath expr="//table[hasclass('table', 'table-sm', 'o_main_table')]" position="attributes">
-            <attribute name="style">margin-bottom: 0px;</attribute>
+            <attribute name="style">margin-bottom: 5px;</attribute>
         </xpath>
-<!--        <xpath expr="//div[@id='total']/div//table[hasclass('table', 'table-sm')]" position="attributes">-->
-<!--             <attribute name="style">width: 150%;</attribute>-->
-<!--&lt;!&ndash;             <attribute name="style">margin-left: 58.5px;</attribute>&ndash;&gt;-->
-<!--        </xpath>-->
-<!--        <xpath expr="//table[hasclass('table', 'table-sm')]" position="attributes">-->
-<!--            <attribute name="style">width: 86px; margin-left: 58.5px;</attribute>-->
-<!--        </xpath>-->
+        <!--        <xpath expr="//div[@id='total']/div//table[hasclass('table', 'table-sm')]" position="attributes">-->
+        <!--             <attribute name="style">width: 150%;</attribute>-->
+        <!--&lt;!&ndash;             <attribute name="style">margin-left: 58.5px;</attribute>&ndash;&gt;-->
+        <!--        </xpath>-->
+        <!--        <xpath expr="//table[hasclass('table', 'table-sm')]" position="attributes">-->
+        <!--            <attribute name="style">width: 86px; margin-left: 58.5px;</attribute>-->
+        <!--        </xpath>-->
         <!-- Hidden information block from base report  -->
         <xpath expr="//div[@id='informations']" position="replace">
         </xpath>
@@ -166,7 +166,7 @@
                 <!--                    <br/>-->
                 <!--                    <t t-set="sn" t-value="sn+1"/>-->
                 <!--                </td>-->
-                <td id="td_default_code" class="text-right" style="border-bottom: 1px solid black;">
+                <td id="td_default_code" class="text-left" style="border-bottom: 1px solid black;">
                     <span t-field="line.product_id.default_code"/>
                 </td>
                 <td id="product" style="border-bottom: 1px solid black;">
@@ -327,8 +327,12 @@
     </template>
     <template id="tax_groups_totals_extended" inherit_id="account.tax_groups_totals">
         <xpath expr="//t[@t-else='']//td[2]" position="attributes">
-            <attribute name="class">text-right o_price_total bg-light  </attribute>
+            <attribute name="class">text-right o_price_total bg-light</attribute>
             <attribute name="style">border-left: 1px solid black; margin-right: 2px;</attribute>
+        </xpath>
+        <xpath expr="//t[@t-else='']//td[1]/span" position="replace">
+<!--            <attribute name="class"> font-weight-bold</attribute>-->
+            <strong class="text-nowrap" t-esc="amount_by_group['tax_group_name']"/>
         </xpath>
     </template>
 </odoo>
