--- a/bista_purchase/report/report_templates.xml
+++ b/bista_purchase/report/report_templates.xml
@@ -60,11 +60,11 @@
             </t>
             <t t-elif="doc_model == 'sale.order'">
                 <div class="o_boxed_header">
-                    <div class="row mb8">
+                    <div class="row mb8" style="border-bottom: 1px solid black;">
                         <div class="col-6">
 
                             <img t-if="company.logo" t-att-src="image_data_uri(company.logo)" alt="Logo"/>
-                            <div style="top-margin:50px; padding-bottom:10px;" t-field="o.company_id.partner_id"
+                            <div style="top-margin:50px; padding-bottom:10px; " t-field="o.company_id.partner_id"
                                  t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": true}'/>
 
                         </div>
